--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,19 @@
     <version>2.26</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <!-- https://hc.apache.org/httpcomponents-client-4.5.x/httpclient/dependency-info.html -->
     <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.6</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+   <!-- <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
-    </dependency>
+    </dependency>-->
 
     <!--https://github.com/ralfstx/minimal-json-->
     <dependency>
